@@ -1,3 +1,6 @@
+3561.	[bug]		dig: issue a warning if an EDNS query returns FORMERR
+			or NOTIMP.  Adjust usage message. [RT #33363]
+			
 	--- 9.6-ESV-R9rc2 released ---
 
 3560.	[bug]		isc-config.sh did not honour includedir and libdir
